--- a/snap/core18/snapcraft.yaml
+++ b/snap/core18/snapcraft.yaml
@@ -1,11 +1,11 @@
 name: qt-deployer
-version: '1.0test4'
+version: '1.0core18'
 summary: Deploy Qt Project
 description: |
   Deploy Qt Projects. this application extract all depends library of executable and create launch script for your application.
 grade: stable # must be 'stable' to release into candidate/stable channels
-confinement: strict # use 'strict' once you have the right plugs and slots
-
+confinement: classic # use 'strict' once you have the right plugs and slots
+base: core18
 
 icon: snap/gui/icon.png
 
@@ -13,7 +13,7 @@ apps:
   qt-deployer:
     command: qt5-launch opt/qt-deployer/bin/qt-deployer
 #    desktop: usr/share/applications/desc.desktop
-    plugs: [desktop, home, opengl, x11, wayland, removable-media]
+    plugs: [desktop, home, opengl, x11, wayland]
 
 
 parts:
@@ -22,7 +22,14 @@ parts:
     source: source/
     build-packages:
       - qtbase5-dev
+      - qtdeclarative5-dev
     stage-packages:
       # Here for the plugins-- they're not linked in automatically.
       - libqt5gui5
+      - libqt5qml5
+      - libqt5quick5
+      - qml-module-qtquick2
+      - qml-module-qtquick-dialogs
+      - qml-module-qtquick-controls
+      - qml-module-qtgraphicaleffects
 after: [qt5conf] # A wiki part
