--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -11,9 +11,9 @@ icon: snap/gui/icon.png
 
 apps:
   qt-deployer:
-    command: qt5-launch opt/qt-deployer/bin/qt-deployer
+    command: desktop-launch $SNAP/opt/qt-deployer/bin/qt-deployer
 #    desktop: usr/share/applications/desc.desktop
-    plugs: [desktop, home, opengl, x11, wayland, removable-media]
+    plugs: [desktop, home, opengl, x11, wayland, removable-media, gsettings, DBus]
 
 
 parts:
@@ -25,4 +25,4 @@ parts:
     stage-packages:
       # Here for the plugins-- they're not linked in automatically.
       - libqt5gui5
-    after: [qt5conf] # A wiki part
+    after: [desktop-qt5] # A wiki part
