--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: qt-deployer
-version: '1.0.core16'
+version: '1.0.1.core16'
 summary: Deploy Qt Project
 description: |
   Deploy Qt Projects. this application extract all depends library of executable and create launch script for your application. |
@@ -14,7 +14,7 @@ apps:
   qt-deployer:
     command: desktop-launch $SNAP/opt/qt-deployer/bin/qt-deployer
 #    desktop: usr/share/applications/desc.desktop
-    plugs: [desktop, home, opengl, x11, wayland, removable-media, gsettings, dbus]
+    plugs: [desktop, home, opengl, x11, wayland, removable-media, gsettings, dbus, unity7]
 
 
 parts:
