--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -5,7 +5,7 @@ description: |
   Deploy Qt Projects. this application extract all depends library of executable and create launch script for your application. |
   All you need is to select a folder with a compiled libraries of qt and a folder with your project.
 grade: stable # must be 'stable' to release into candidate/stable channels
-confinement: strict # use 'strict' once you have the right plugs and slots
+confinement: classic # use 'strict' once you have the right plugs and slots
 
 
 icon: snap/gui/icon.png
