--- a/source/InstallTemplate/package.xml
+++ b/source/InstallTemplate/package.xml
@@ -3,7 +3,8 @@
     <DisplayName>%0</DisplayName>
     <Description>%1</Description>
     <Version>%2</Version>
-    <Virtual>false</Virtual>
     <ReleaseDate>%3</ReleaseDate>
     <SortingPriority>200</SortingPriority>
+    <Default>%4</Default>
+    %5
 </Package>
